--- a/layout/main-full-resolution.ui
+++ b/layout/main-full-resolution.ui
@@ -6,21 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1202</width>
-    <height>682</height>
+    <width>1305</width>
+    <height>923</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
-   <widget class="QFrame" name="zcc_leftFrame">
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QFrame" name="LeftFarme">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
+      <x>10</x>
+      <y>10</y>
       <width>221</width>
-      <height>681</height>
+      <height>901</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -35,10 +35,26 @@
        <x>10</x>
        <y>10</y>
        <width>202</width>
-       <height>661</height>
+       <height>881</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QGraphicsView" name="zcc_graphicsView_slogan">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>200</height>
+         </size>
+        </property>
+       </widget>
+      </item>
       <item>
        <widget class="Line" name="line_4">
         <property name="orientation">
@@ -532,7 +548,7 @@
             <x>0</x>
             <y>0</y>
             <width>202</width>
-            <height>531</height>
+            <height>541</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -653,7 +669,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="zcc_checkBox_flagDisplayFeedbackCurve">
+            <widget class="QCheckBox" name="zcc_checkBox_flagDisplayReferenceCurve_2">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -1100,13 +1116,13 @@
      </layout>
     </widget>
    </widget>
-   <widget class="QFrame" name="zcc_bottomFrame">
+   <widget class="QFrame" name="frame_3">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>550</y>
-      <width>981</width>
-      <height>131</height>
+      <x>230</x>
+      <y>740</y>
+      <width>1061</width>
+      <height>171</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -1119,9 +1135,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>0</y>
-       <width>961</width>
-       <height>124</height>
+       <y>10</y>
+       <width>1041</width>
+       <height>151</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -1259,7 +1275,7 @@
         <item>
          <widget class="QLabel" name="label_7">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -1271,12 +1287,6 @@
         </item>
         <item>
          <widget class="QPushButton" name="zcc_pushButton_zeroOffset">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
           <property name="text">
            <string>零点校正</string>
           </property>
@@ -1292,16 +1302,10 @@
         <item>
          <widget class="QGroupBox" name="groupBox">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+           <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>150</width>
-            <height>0</height>
-           </size>
           </property>
           <property name="baseSize">
            <size>
@@ -1318,27 +1322,27 @@
           <property name="checkable">
            <bool>true</bool>
           </property>
-          <widget class="QWidget" name="horizontalLayoutWidget_3">
+          <widget class="QWidget" name="verticalLayoutWidget_5">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>20</y>
-             <width>158</width>
-             <height>31</height>
+             <width>81</width>
+             <height>54</height>
             </rect>
            </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_21">
-            <item>
-             <widget class="QPushButton" name="zcc_pushButton_0gOffset">
-              <property name="text">
-               <string>砝码：  0g</string>
-              </property>
-             </widget>
-            </item>
+           <layout class="QVBoxLayout" name="verticalLayout_9">
             <item>
              <widget class="QPushButton" name="zcc_pushButton_offset200g">
               <property name="text">
                <string>砝码：200g</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="zcc_pushButton_0gOffset">
+              <property name="text">
+               <string>砝码：  0g</string>
               </property>
              </widget>
             </item>
@@ -1403,13 +1407,13 @@
      </layout>
     </widget>
    </widget>
-   <widget class="QFrame" name="zcc_middleFrame">
+   <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>0</y>
-      <width>981</width>
-      <height>552</height>
+      <x>230</x>
+      <y>10</y>
+      <width>1061</width>
+      <height>731</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -1423,15 +1427,11 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>961</width>
-       <height>531</height>
+       <width>1041</width>
+       <height>711</height>
       </rect>
      </property>
-     <layout class="QHBoxLayout" name="zcc_horizontalLayout_mainScreen">
-      <property name="sizeConstraint">
-       <enum>QLayout::SetDefaultConstraint</enum>
-      </property>
-     </layout>
+     <layout class="QHBoxLayout" name="zcc_horizontalLayout_mainScreen"/>
     </widget>
    </widget>
   </widget>
