--- a/layout/main-save.ui
+++ b/layout/main-save.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
+  <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="zcc_leftFrame">
     <property name="geometry">
      <rect>
@@ -1427,11 +1427,7 @@
        <height>531</height>
       </rect>
      </property>
-     <layout class="QHBoxLayout" name="zcc_horizontalLayout_mainScreen">
-      <property name="sizeConstraint">
-       <enum>QLayout::SetDefaultConstraint</enum>
-      </property>
-     </layout>
+     <layout class="QHBoxLayout" name="zcc_horizontalLayout_mainScreen"/>
     </widget>
    </widget>
   </widget>
