--- a/layout/main.ui
+++ b/layout/main.ui
@@ -77,7 +77,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>2</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -116,9 +116,6 @@
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
                <property name="placeholderText">
                 <string>被试姓名</string>
@@ -331,9 +328,6 @@
                <property name="text">
                 <string/>
                </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-               </property>
                <property name="placeholderText">
                 <string>新建实验设计</string>
                </property>
@@ -354,9 +348,6 @@
               <widget class="QLineEdit" name="zcc_lineEdit_designMaker">
                <property name="text">
                 <string/>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
                <property name="placeholderText">
                 <string>匿名</string>
@@ -428,6 +419,22 @@
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
+               <property name="maximum">
+                <double>150.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QDoubleSpinBox" name="zcc_doubleSpinBox_metricThreshold1_2">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximum">
+                <double>150.000000000000000</double>
+               </property>
               </widget>
              </item>
             </layout>
@@ -455,6 +462,22 @@
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
+               <property name="maximum">
+                <double>150.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QDoubleSpinBox" name="zcc_doubleSpinBox_metricThreshold2_2">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximum">
+                <double>150.000000000000000</double>
+               </property>
               </widget>
              </item>
             </layout>
@@ -481,6 +504,22 @@
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
+               </property>
+               <property name="maximum">
+                <double>150.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QDoubleSpinBox" name="zcc_doubleSpinBox_metricThreshold3_2">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximum">
+                <double>150.000000000000000</double>
                </property>
               </widget>
              </item>
@@ -590,7 +629,8 @@
                 </sizepolicy>
                </property>
                <property name="text">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;--&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>
+                                                                    &lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;--&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
               </widget>
              </item>
@@ -695,7 +735,8 @@
                 </sizepolicy>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: black;</string>
+                <string notr="true">background-color:
+                                                                    black;</string>
                </property>
                <property name="text">
                 <string/>
@@ -820,7 +861,8 @@
                 </sizepolicy>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: black;</string>
+                <string notr="true">background-color:
+                                                                    black;</string>
                </property>
                <property name="text">
                 <string/>
@@ -966,7 +1008,8 @@
                 </sizepolicy>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: black;</string>
+                <string notr="true">background-color:
+                                                                    black;</string>
                </property>
                <property name="text">
                 <string/>
@@ -1323,7 +1366,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>砝码：  0g</string>
+               <string>砝码： 0g</string>
               </property>
              </widget>
             </item>
