--- a/layout/main.ui
+++ b/layout/main.ui
@@ -77,7 +77,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>1</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -550,8 +550,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>202</width>
-            <height>531</height>
+            <width>201</width>
+            <height>570</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -660,19 +660,6 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_18">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text">
-              <string>实时反馈线设置</string>
-             </property>
-            </widget>
-           </item>
-           <item>
             <widget class="QCheckBox" name="zcc_checkBox_flagDisplayFeedbackCurve">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -684,7 +671,7 @@
               <string notr="true"/>
              </property>
              <property name="text">
-              <string>是/否显示实时反馈线</string>
+              <string>实时反馈线</string>
              </property>
             </widget>
            </item>
@@ -756,19 +743,6 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_13">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text">
-              <string>参考线设置</string>
-             </property>
-            </widget>
-           </item>
-           <item>
             <widget class="QCheckBox" name="zcc_checkBox_flagDisplayReferenceCurve">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -777,7 +751,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>是/否显示参考线</string>
+              <string>参考线</string>
              </property>
             </widget>
            </item>
@@ -882,19 +856,6 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_25">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text">
-              <string>延迟设置</string>
-             </property>
-            </widget>
-           </item>
-           <item>
             <widget class="QCheckBox" name="zcc_checkBox_flagDisplayDelayedCurve">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -903,7 +864,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>是/否显示延迟线</string>
+              <string>延迟线</string>
              </property>
             </widget>
            </item>
@@ -944,6 +905,12 @@
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
                <property name="text">
                 <string>更新步长（秒/s）</string>
                </property>
@@ -956,6 +923,12 @@
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
                </property>
               </widget>
              </item>
@@ -1042,6 +1015,46 @@
             </widget>
            </item>
            <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QCheckBox" name="zcc_checkBox_axis">
+               <property name="text">
+                <string>坐标轴</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="zcc_checkBox_grid">
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
+               </property>
+               <property name="text">
+                <string>网格</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="zcc_checkBox_marker">
+               <property name="text">
+                <string>提示符</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
             <layout class="QHBoxLayout" name="horizontalLayout_17">
              <item>
               <widget class="QLabel" name="label_34">
@@ -1050,6 +1063,12 @@
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
                </property>
                <property name="text">
                 <string>均值阈值</string>
@@ -1064,6 +1083,12 @@
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
                <property name="maximum">
                 <double>1000.000000000000000</double>
                </property>
@@ -1075,11 +1100,20 @@
             <layout class="QHBoxLayout" name="horizontalLayout_18">
              <item>
               <widget class="QLabel" name="label_35">
+               <property name="enabled">
+                <bool>true</bool>
+               </property>
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
                </property>
                <property name="text">
                 <string>注意商数</string>
@@ -1093,6 +1127,12 @@
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
                </property>
                <property name="maximum">
                 <double>1000.000000000000000</double>
